# open-finetune-config-os

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  finetuning_configs_final.jsonl  finetuning_configs_v2_final.jsonl.txt  fly.toml  pyproject.toml  railway.json  raw_user_dataset.jsonl  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: recommendation_algorithm.md
evaluation/: __init__.py  gates.py  golden_dataset.jsonl  harness.py
frontend/: .env.example  Dockerfile  next-env.d.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: recommendation-form.tsx
frontend/lib/: api.ts
scripts/: build_golden_dataset.py  build_profiles.py  check_retraining.py  evaluate_candidate.py  generate_recommendation.py  generate_synthetic_configs.py  promote_model.py  rollback_model.py  run_release_cycles.py  train_hp_predictor.py  train_ml_reranker.py  validate_notebooks.py
src/ft_config_engine/: __init__.py  __main__.py  api.py  constants.py  db.py  dependencies.py  governance.py  hp_predictor.py  memory.py  metrics.py  ml_ranker.py  models.py  normalization.py  notebook_engine.py  recommender.py  reranking.py  retraining.py  statistics.py
src/ft_config_engine/evaluation/: __init__.py
src/ft_config_engine/templates/: causal_lm_lora.j2  classification.j2  qa.j2  qlora_4bit.j2  summarization_t5.j2
tests/: test_api_hardening.py  test_dataset_path_resolution.py  test_hp_predictor.py  test_ml_ranker.py  test_production_spec.py
