[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft-config-engine"
version = "0.1.0"
description = "Deterministic fine-tuning configuration intelligence engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "jinja2>=3.1.0",
  "nbformat>=5.10.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "slowapi>=0.1.9",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "prometheus-client>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
